Adding automation developer modules

--- a/downstream/assemblies/platform/assembly-gs-auto-op.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-op.adoc
@@ -9,6 +9,8 @@ ifdef::context[]
 [id="assembly-gs-auto-op_{context}"]
 endif::[]
 
+:context: assembly-gs-auto-op
+
 = Getting started as an automation operator
 
 As an automation operator, {PlatformNameShort} can help you organize and manage automation projects using Red Hat certified collections or custom content for your organization. 
@@ -31,6 +33,14 @@ include::platform/proc-gs-publish-to-a-collection.adoc[leveloffset=+1]
 include::platform/con-gs-manage-collections.adoc[leveloffset=+2]
 include::platform/proc-gs-upload-collection.adoc[leveloffset=+2]
 include::platform/con-gs-execution-env.adoc[leveloffset=+1]
+include::platform/proc-gs-use-base-execution-env.adoc[leveloffset=+2]
+include::platform/proc-gs-add-ee-to-job-template.adoc[leveloffset=+2]
+include::platform/proc-gs-auto-op-projects.adoc[leveloffset=+1]
+include::platform/con-gs-auto-op-job-templates.adoc[leveloffset=+1]
+include::platform/proc-gs-auto-op-launch-template.adoc[leveloffset=+2]
+include::platform/con-gs-auto-op-about-inv.adoc[leveloffset=+1]
+include::platform/con-gs-auto-op-execute-inv.adoc[leveloffset=+2]
 
-ifdef::parent-context-of-assembly-gs-auto-op[:context: {parent-context-of-assemblyname}]
+
+ifdef::parent-context-of-assembly-gs-auto-op[:context: {parent-context-of-assembly-gs-auto-op}]
 ifndef::parent-context-of-assembly-gs-auto-op[:!context:]
