--- a/downstream/modules/platform/con-gs-ansible-roles.adoc
+++ b/downstream/modules/platform/con-gs-ansible-roles.adoc
@@ -10,4 +10,6 @@ To learn more about roles, see link:https://www.redhat.com/en/topics/automation/
 
 == Creating a role
 
+You can create roles using the Ansible Galaxy CLI tool, which is included with your Ansible Automation Platform bundle. Access role-specific commands from the roles subcommand:
+
 //ADD CONTENT
