--- a/downstream/modules/platform/con-gs-auto-op-about-inv.adoc
+++ b/downstream/modules/platform/con-gs-auto-op-about-inv.adoc
@@ -1,6 +1,9 @@
-[id="con-gs-about-inv"]
+[id="con-gs-auto-op-about-inv"]
 
 = About inventories
 
 An inventory is a file listing the collection of hosts managed by automation controller. 
 Organizations are assigned to inventories, while permissions to launch playbooks against inventories are controlled at the user or team level.
+
+Platform administrators and automation developers have the permissions to create inventories. 
+As an automation operator you can view inventories and their details.
