--- a/downstream/modules/platform/proc-gs-use-base-execution-env.adoc
+++ b/downstream/modules/platform/proc-gs-use-base-execution-env.adoc
@@ -1,4 +1,4 @@
-[id="proc-gs-use-base-execution-env"]
+[id="proc-gs-use-base-execution-env_{context}"]
 
 = Using the base automation {ExecEnvShort}
 
