--- a/downstream/assemblies/platform/assembly-controller-job-templates.adoc
+++ b/downstream/assemblies/platform/assembly-controller-job-templates.adoc
@@ -7,6 +7,6 @@ Job templates are useful to run the same job many times. Job templates also enco
 For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-job-templates[Job Templates] in _{ControllerUG}_. 
 
 include::platform/proc-controller-getting-started-with-job-templates.adoc[leveloffset=+1]
-//include::platform/proc-controller-create-job-template.adoc[leveloffset=+1]
+include::platform/proc-controller-create-job-template.adoc[leveloffset=+1]
 include::platform/proc-controller-edit-job-template.adoc[leveloffset=+1]
 include::platform/proc-controller-run-job-template.adoc[leveloffset=+1]
