--- a/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
@@ -9,6 +9,8 @@ ifdef::context[]
 [id="assembly-gs-auto-dev_{context}"]
 endif::[]
 
+:context: assembly-gs-auto-dev
+
 = Getting started as an automation developer
 
 As an automation developer, you can use {PlatformNameShort} to implement your organization's automation strategy. 
@@ -36,12 +38,16 @@ include::platform/con-gs-execution-env.adoc[leveloffset=+1]
 include::platform/proc-gs-use-base-execution-env.adoc[leveloffset=+2]
 include::platform/proc-gs-add-ee-to-job-template.adoc[leveloffset=+2]
 include::platform/con-gs-build-decision-env.adoc[leveloffset=+1]
-include::eda/proc-eda-set-up-new-decision-environment.adoc[leveloffset=+2]
-include::platform/proc-controller-adding-a-project.adoc[leveloffset=+1]
-include::eda/proc-eda-set-up-new-project.adoc[leveloffset=+1]
-include::platform/con-gs-about-inv.adoc[leveloffset=+1]
+include::platform/proc-gs-auto-dev-set-up-decision-env.adoc[leveloffset=+2]
+include::platform/proc-gs-auto-dev-create-automation-execution-proj.adoc[leveloffset=+1]
+include::platform/proc-gs-auto-dev-create-automation-decision-proj.adoc[leveloffset=+1]
+include::platform/con-gs-auto-dev-about-inv.adoc[leveloffset=+1]
 include::platform/proc-controller-create-inventory.adoc[leveloffset=+2]
-include::assembly-controller-job-templates.adoc[leveloffset=+1]
+include::platform/con-gs-auto-dev-job-templates.adoc[leveloffset=+1]
+include::platform/proc-controller-getting-started-with-job-templates.adoc[leveloffset=+2]
+include::platform/proc-gs-auto-dev-create-template.adoc[leveloffset=+2]
+include::platform/proc-gs-auto-dev-run-template.adoc[leveloffset=+2]
+include::platform/proc-controller-edit-job-template.adoc[leveloffset=+2]
 include::platform/con-gs-rulebook-activations.adoc[leveloffset=+1]
 include::eda/proc-eda-set-up-rulebook-activation.adoc[leveloffset=+2]
 include::eda/con-eda-rulebook-activation-list-view.adoc[leveloffset=+3]
@@ -50,5 +56,5 @@ include::eda/proc-eda-restart-rulebook-activations.adoc[leveloffset=+2]
 include::eda/proc-eda-delete-rulebook-activations.adoc[leveloffset=+2]
 include::eda/proc-eda-activate-webhook.adoc[leveloffset=+2]
 
-ifdef::parent-context-of-assembly-gs-auto-dev[:context: {parent-context-of-assemblyname}]
+ifdef::parent-context-of-assembly-gs-auto-dev[:context: {parent-context-of-assembly-gs-auto-dev}}]
 ifndef::parent-context-of-assembly-gs-auto-dev[:!context:]
