--- a/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
+++ b/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
@@ -1,4 +1,4 @@
-[id="proc-gs-add-ee-to-job-template"]
+[id="proc-gs-add-ee-to-job-template_{context}"]
 
 = Adding an {ExecEnvShort} to a job template
 
