--- a/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
+++ b/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
@@ -24,11 +24,11 @@ Your system must meet the following minimum system requirements to install and r
 |40 GB
 |===
 
-To see the rest of the {PlatformName} system requirements, see _Chapter 4. System requirements_ in the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/red_hat_ansible_automation_platform_planning_guide/index#platform-system-requirements[{PlatformName} Planning Guide].
+To see the rest of the {PlatformName} system requirements, see the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_planning_guide/index#red_hat_ansible_automation_platform_system_requirements[System requirements] in the _{PlatformName} Planning Guide_.
 
 [NOTE]
 ====
-You must also have installed {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data. The installation includes a base model that you can use to set up your {LightspeedshortName} on-premise deployment. For installation information, see the link:https://www.ibm.com/docs/SSQNUZ_5.0.x/svc-welcome/wxca-ansible.html[watsonx Code Assistant for {LightspeedshortName} on Cloud Pak for Data documentation]. 
+You must also have installed {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data. The installation includes a base model that you can use to set up your {LightspeedshortName} on-premise deployment. For installation information, see the link:https://www.ibm.com/docs/SSQNUZ_5.0.x/svc-welcome/wxca-ansible.html[IBM watsonx Code Assistant for {LightspeedshortName} on Cloud Pak for Data documentation]. 
 ====
 
 == Prerequisites
