AAP-22930 Update the Projects chapter in the EDA controller user guide (#1648)
* AAP-22930 Updates to the Projects chapter in the EDA controller user guide

* AAP-22930 Updates to the Projects chapter in the EDA controller user guide

* AAP-22930 Removed the image b/c it needs to be replaced with current 2.5 version

* AAP-22930 Grammatical correction

* AAP-22930 Final tweaks for performance tuning chapter

--- a/downstream/modules/eda/proc-eda-editing-a-project.adoc
+++ b/downstream/modules/eda/proc-eda-editing-a-project.adoc
@@ -4,8 +4,7 @@
 
 .Procedure
 
-. From the *Projects* list view, select the btn:[More Actions] icon *{MoreActionsIcon}* next to the desired project.
-. Select btn:[Edit project].
+. From the *Projects* list view, select the btn:[More Actions] icon *{MoreActionsIcon}* next to the desired project. The Edit page is displayed.
 . Enter the required changes and select btn:[Save project].
-
-image::eda-edit-project.png[Edit project]
+//[J. Self]replace the following image, if possible
+//::eda-edit-project.png[Edit project]
