--- a/downstream/modules/eda/proc-eda-set-up-new-project.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-project.adoc
@@ -2,32 +2,46 @@
 
 = Setting up a new project
 
+You can set up projects to manage and store your rulebooks in {EDAcontroller}. 
+
 .Prerequisites
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-* You are logged in to the {EDAcontroller} Dashboard as a Content Consumer.
+* You are logged in to the {PlatformNameShort} Dashboard as a Content Consumer.
 * You have set up a credential, if necessary.
 For more information, see the xref:eda-set-up-credential[Setting up credentials] section.
 * You have an existing repository containing rulebooks that are integrated with playbooks contained in a repository to be used by {ControllerName}.
 
 .Procedure
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-. Log in to the {EDAcontroller} Dashboard.
-. From the navigation panel, select *{MenuADProjects}*.
+. Log in to the {PlatformNameShort} Dashboard.
+. Navigate to *{MenuADProjects}*.
+. Click btn:[Create project].
 . Insert the following:
 +
 Name:: Enter project name.
 Description:: This field is optional.
-SCM type:: Git is the only SCM type available for use.
-SCM URL:: HTTP[S] protocol address of a repository, such as GitHub or GitLab.
+Source control type:: Git is the only source control type available for use. This field is optional.
+Source control URL:: Enter Git, SSH, or HTTP[S] protocol address of a repository, such as GitHub or GitLab. This field is not editable.
 +
 [NOTE]
 ====
-You cannot edit the SCM URL after you create the project.
+This field accepts SSH private key or private key phrase. To enable the use of these private keys, your project URL must begin with `git@`.
 ====
-Credential:: This field is optional. This is the token needed to utilize the SCM URL.
+Proxy:: This is used to access access HTTP or HTTPS servers. This field is optional.
+Source control branch/tag/commit:: This is the branch to checkout. In addition to branches, you can input tags, commit hashes, and arbitrary refs. Some commit hashes and refs may not be available unless you also provide a custom refspec. This field is optional.
+Source control refspec:: A refspec to fetch (passed to the Ansible git module). This parameter allows access to references via the branch field not otherwise available. This field is optional.
+For more information, see link:https://docs.ansible.com/ansible/latest/collections/ansible/builtin/git_module.html#examples[Examples].
+Source control credential:: You must have this credential to utilize the source control URL. This field is optional.
+Content signature validation credential:: Enable content signing to verify that the content has remained secure when a project is synced. If the content has been tampered with, the job will not run. This field is optional.
+Options:: The Verify SSL option is enabled by default. Enabling this option verifies the SSL with HTTPS when the project is imported.
++
+[NOTE]
+====
+You can disable this option if you have a local repository that uses self-signed certificates.
+====
 . Select btn:[Create project].
 
-Your project is now created and can be managed in the *Projects* screen.
+Your project is now created and can be managed in the *Projects* page.
 
 After saving the new project, the project's details page is displayed.
 From there or the *Projects* list view, you can edit or delete it.
