AAP-20599: Incorporated peer review comments

--- a/lightspeed/modules/proc_monitor-onpremise-deployment.adoc
+++ b/lightspeed/modules/proc_monitor-onpremise-deployment.adoc
@@ -12,20 +12,15 @@ After the {LightspeedShortName} on-premise deployment is successful, use the fol
 .Procedure
 
 . Create a *system auditor* user:
-.. Create a user in the {PlatformName} with *system auditor* role.
-+
-To know the procedure to create a user with *system auditor* role, see the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-creating-a-user[Creating a user] in the _Automation Controller User Guide_.
+.. Create a user with the *system auditor* role in the the {PlatformName}. Refer to the procedure in the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-creating-a-user[Creating a user] in the _Automation Controller User Guide_.
+
 .. Verify that you can log in to the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page], and then log out.
 
 . Create a token for the *system auditor* user:
 .. Log in to the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page] as an organization administrator.
-.. Create a token for the *system auditor* user that you created.
-+
-To know the procedure to create tokens, see the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-user-tokens[Creating tokens for a user] in the _Automation Controller User Guide_.
+.. Create a token for the *system auditor* user. Refer to the procedure in the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-user-tokens[Creating tokens for a user] in the _Automation Controller User Guide_.
 .. Log out from the portal. 
 
 . Monitor your {LightspeedShortName} on-premise deployment:
 .. Log in to the link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page] as the system auditor user.
-.. Use the Authorization token to access the metrics endpoint `/api/v2/metrics/`.
-+
-To know the procedure to create tokens, see the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-controller-metrics[Metrics] in the _Automation Controller Administration Guide_.
+.. Use the Authorization token to access the metrics endpoint `/api/v2/metrics/`. Refer to the procedure in the topic link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-controller-metrics[Metrics] in the _Automation Controller Administration Guide_.
