Adding getting started guide to repo

--- a/downstream/assemblies/platform/assembly-gs-auto-op.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-op.adoc
@@ -18,12 +18,12 @@ As an automation operator, {PlatformNameShort} can help you organize and manage 
 To get started as a platform operator, see the following sections:
 
 * xref:con-gs-playbooks[Get started with playbooks]
-* Publishing to a collection in a source code manager
-* Automation execution projects 
-* Build and use an execution environment
-* Job templates
-* About inventories
-* Automation execution jobs 
+* xref:proc-gs-publish-to-a-collection_{context}[Publishing to a collection in a source code manager]
+* xref:proc-gs-auto-op-projects[Automation execution projects] 
+* xref:con-gs-execution-env_{context}[Build and use an execution environment]
+* xref:con-gs-auto-op-job-templates[Job templates]
+* xref:con-gs-auto-op-about-inv[About inventories]
+* xref:con-gs-automation-execution-jobs[Automation execution jobs]
 
 include::platform/con-gs-playbooks.adoc[leveloffset=+1]
 include::platform/proc-gs-write-playbook.adoc[leveloffset=+1]
@@ -40,7 +40,9 @@ include::platform/con-gs-auto-op-job-templates.adoc[leveloffset=+1]
 include::platform/proc-gs-auto-op-launch-template.adoc[leveloffset=+2]
 include::platform/con-gs-auto-op-about-inv.adoc[leveloffset=+1]
 include::platform/con-gs-auto-op-execute-inv.adoc[leveloffset=+2]
-
+include::platform/con-gs-automation-execution-jobs.adoc[leveloffset=+1]
+include::platform/proc-gs-auto-op-review-job-status.adoc[leveloffset=+2]
+include::platform/proc-gs-auto-op-review-job-output.adoc[leveloffset=+2]
 
 ifdef::parent-context-of-assembly-gs-auto-op[:context: {parent-context-of-assembly-gs-auto-op}]
 ifndef::parent-context-of-assembly-gs-auto-op[:!context:]
