--- a/downstream/modules/platform/proc-gs-logging-in.adoc
+++ b/downstream/modules/platform/proc-gs-logging-in.adoc
@@ -2,7 +2,8 @@
 
 = Logging in for the first time
 
-When logging into the {PlatformNameShort} as an administrator for the first time, enter your subscription information. You can then create user profiles and assign roles.
+Log in to the {PlatformNameShort} as an administrator and enter your subscription information. 
+You can then create user profiles and assign roles.
 
 .Procedure
 
