--- a/downstream/modules/platform/proc-gs-upload-collection.adoc
+++ b/downstream/modules/platform/proc-gs-upload-collection.adoc
@@ -2,7 +2,4 @@
 
 = Uploading a collection to {HubName}
 
-If you want to share a collection that you have created with the rest of the Ansible community, you can upload it to automation hub. 
-
-When you upload a collection to automation hub, our Partner Engineering team reviews it for certification.
-
+If you want to share a collection that you have created with the rest of the Ansible community, you can upload it to {HubName}. 
