--- a/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
+++ b/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
@@ -13,4 +13,5 @@ include::platform/con-gs-automation-mesh.adoc[leveloffset=+1]
 include::platform/con-gs-ansible-lightspeed.adoc[leveloffset=+1]
 include::platform/con-gs-developer-tools.adoc[leveloffset=+1]
 include::platform/ref-gs-install-config.adoc[leveloffset=+1]
+include::platform/con-gs-dashboard-components.adoc[leveloffset=+1]
 include::platform/con-gs-final-set-up.adoc[leveloffset=+1]
