--- a/downstream/modules/platform/con-gs-learn-about-collections.adoc
+++ b/downstream/modules/platform/con-gs-learn-about-collections.adoc
@@ -18,9 +18,9 @@ After collections are finalized, you can import them to a location where they ca
 
 .Procedure
 
-. Log in to Red Hat Ansible Automation Platform.
+. Log in to {PlatformName}.
 . From the navigation panel, select *Full Experience*. 
-The {{HubName}} UI is displayed.
+The {HubName} UI is displayed.
 . From the navigation panel, select {MenuACCollections}. 
 The *Collections* page displays all collections across all repositories. 
 You can search for a specific collection.
