--- a/downstream/modules/platform/proc-controller-creating-a-team.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-team.adoc
@@ -4,12 +4,15 @@
 
 = Creating a team
 
-You can create new teams, assign an organization to the team, and manage the users and administrators associated with each team. Users associated with a team inherit the permissions associated with the team and any organization permissions to which the team has membership. 
+You can create new teams, assign an organization to the team, and manage the users and administrators associated with each team. 
+Users associated with a team inherit the permissions associated with the team and any organization permissions to which the team has membership. 
 To add a user or administrator to a team, the user must have already been created.
+
 .Procedure
+
 . From the navigation panel, select {MenuAMTeams}.
 . Click btn:[Create team].
-. Enter a *Name* and optionally provide a *Description* for the team. 
+. Enter a *Name* and optionally give a *Description* for the team. 
 . Select an organization from the *Organization* list to which you want to associate this team.
 +
 [NOTE]
