Modified instructions for VM-based mesh (#1696)
* Modified instructions for VM-based mesh

Included modules from installation doc

hackfest doc updates for mesh - install

https://issues.redhat.com/browse/AAP-26993

* Modified instructions for VM-based mesh

Correction

hackfest doc updates for mesh - install

https://issues.redhat.com/browse/AAP-26993

* Modified instructions for VM-based mesh

Corrections

hackfest doc updates for mesh - install

https://issues.redhat.com/browse/AAP-26993

--- a/downstream/modules/platform/con-install-mesh.adoc
+++ b/downstream/modules/platform/con-install-mesh.adoc
@@ -2,8 +2,8 @@
 
 = {AutomationMesh} Installation
 
-You use the {PlatformNameShort} installation program to set up {AutomationMesh} or to upgrade to {AutomationMesh}.
-To provide {PlatformNameShort} with details about the nodes, groups, and peer relationships in your mesh network, you define them in an the `inventory` file in the installer bundle.
+For a VM-based install of {PlatformNameShort} you use the installation program to set up {AutomationMesh} or to upgrade to {AutomationMesh}.
+To provide {PlatformNameShort} with details about the nodes, groups, and peer relationships in your mesh network, you define them in an the `inventory` file in the installer bundle. For managed cloud, OpenShift, or operator environments, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[{AutomationMeshStart} for managed cloud or operator environments].
 
 [role="_additional-resources"]
 .Additional Resources
