--- a/downstream/modules/platform/proc-running-setup-script.adoc
+++ b/downstream/modules/platform/proc-running-setup-script.adoc
@@ -14,3 +14,7 @@ $ sudo ./setup.sh
 -----
 
 Installation of {PlatformName} will begin.
+
+ifdef::mesh-VM[]
+If you want to add additional nodes to your {AutomationMesh} after the initial setup, edit the inventory file to add the new node, then rerun the `setup.sh` script.
+endif::mesh-VM[]
