--- a/downstream/modules/devtools/proc-devtools-writing-first-playbook.adoc
+++ b/downstream/modules/devtools/proc-devtools-writing-first-playbook.adoc
@@ -7,17 +7,15 @@ The instructions below describe how {ToolsName} help you to create and run your 
 
 .Prerequisites
 
-.You have installed and opened the Ansible {VSCode} extension. 
-.You have installed `ansible-devtools`.
-.You have set up and activated a Python virtual environment in {VSCode}.
-.You have opened a terminal in {VSCode}.
+* You have installed and opened the Ansible {VSCode} extension. 
+* You have opened a terminal in {VSCode}.
+* You have installed `ansible-devtools`.
 
 .Procedure
 
-. Open a YAML file in {VSCode} for your playbook.
-You can create a new file or use the empty placeholder YAML file that you set up when you created the directory and playbook.
+. Create a new .yml file in {VSCode} for your playbook, for example `example_playbook.yml`. Put it in the same directory level as the example `site.yml` file.
 . Add the following example code into the playbook file and save the file.
-The playbook consists of a single play that executes a ping to your local machine. 
+The playbook consists of a single play that executes a `ping` to your local machine. 
 +
 ----
 - name: My first play
@@ -30,5 +28,6 @@ The playbook consists of a single play that executes a ping to your local machin
 +
 `Ansible-lint` runs in the background and displays errors in the *Problems* tab of the terminal.
 There are no errors in this playbook:
-
++
 image::ansible-lint-no-errors.png[Ansible-lint showing no errors in a playbook]
+. Save your playbook file.
