--- a/downstream/modules/devtools/ref-devtools-components.adoc
+++ b/downstream/modules/devtools/ref-devtools-components.adoc
@@ -1,26 +1,28 @@
-[id="devtools-components_context"]
+[id="devtools-components_{context}"]
 
 = {ToolsName} components
 
 [role="_abstract"]
 
 
-You can access most {ToolsName} from the Ansible {VSCode} extension, and others from the command line.
+You can operate some {ToolsName} from the {VSCode} UI when you have installed the Ansible extension, 
+and the remainder from the command line.
+{VSCode} is a free open-source code editor available on Linux, Mac, and Windows.
 
-* Ansible {VSCode} extension:
-This is not packaged with the {PlatformNameShort} RPM package, but it is an integral part of the automation creation process.
-From the Ansible {VSCode} extension, you can use the {ToolsName} for the following tasks:
+Ansible {VSCode} extension::
+This is not packaged with the {PlatformNameShort} RPM package, but it is an integral part of the automation creation workflow.
+From the {VSCode} UI, you can use the {ToolsName} for the following tasks:
 +
 --
 ** Scaffold directories for a playbook project or a collection.
 ** Write playbooks with the help of syntax highlighting and auto-completion.
 ** Debug your playbooks with a linter.
-** Execute playbooks with Ansible Core with `ansible-playbook`.
+** Execute playbooks with Ansible Core using `ansible-playbook`.
 ** Execute playbooks in an execution environment with `ansible-navigator`. 
 --
 +
 From the {VSCode} extension, you can also connect to {LightspeedFullName}.
-* Command-line {ToolsName}: you can perform the following tasks with {ToolsName} from the command line,
+Command-line {ToolsName}:: You can perform the following tasks with {ToolsName} from the command line,
 including the terminal in {VSCode}:
 ** Create an execution environment.
 ** Test your playbooks, roles, modules, plugins and collections.
