--- a/downstream/titles/develop-automation-content/master.adoc
+++ b/downstream/titles/develop-automation-content/master.adoc
@@ -19,8 +19,9 @@ include::{Boilerplate}[]
 include::devtools/assembly-devtools-intro.adoc[leveloffset=+1]
 include::devtools/assembly-developer-workflow.adoc[leveloffset=+1]
 include::devtools/assembly-devtools-install.adoc[leveloffset=+1]
-include::devtools/assembly-devtools-setup.adoc[leveloffset=+1]
+// include::devtools/assembly-devtools-setup.adoc[leveloffset=+1]
 include::devtools/assembly-creating-playbook-project.adoc[leveloffset=+1]
 include::devtools/assembly-writing-running-playbook.adoc[leveloffset=+1]
 // include::devtools/assembly-testing-playbooks.adoc[leveloffset=+1]
+include::devtools/assembly-publishing-playbook-collection-aap.adoc[leveloffset=+1]
 
