--- a/downstream/titles/getting-started/master.adoc
+++ b/downstream/titles/getting-started/master.adoc
@@ -10,7 +10,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Getting started with {PlatformName}
+= Getting started with Ansible Automation Platform
 
 {PlatformName} is a unified automation solution that automates a variety of IT processes, including provisioning, configuration management, application deployment, orchestration, and security and compliance changes (including patching systems). 
 
