--- a/downstream/modules/platform/con-gs-automation-execution.adoc
+++ b/downstream/modules/platform/con-gs-automation-execution.adoc
@@ -4,6 +4,7 @@
 
 The centerpiece of {PlatformNameShort} is its automation execution command and control center, where you can deploy, define, operate, scale and delegate automation across your enterprise. 
 With this functionality, you can perform a variety of tasks, such as the ability to run playbooks using a simple, straightforward web UI, dashboards, and centralized logging to manage and track job execution from a single location. 
+
 In the automation execution environment, you can use {ControllerName} tasks to build job templates, which standardize how automation is deployed, initiated, and delegated, making it more reusable and consistent.
 
 == Inventory files
@@ -16,4 +17,4 @@ Depending on the inventory plugins, you can use many formats for your inventory 
 The location of your inventory file depends on installation program you use. 
 
 .ADDITIONAL RESOURCES
-For more details on inventory files, see [ADD 2.5 LINK]About the installer inventory in the _Red Hat Ansible Automation Platform planning guide_. 
+For more details on inventory files, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/html-single/planning_your_installation/index#about_the_installer_inventory_file[About the installer inventory] in the _Red Hat Ansible Automation Platform planning guide_. 
