--- a/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
+++ b/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
@@ -1,4 +1,15 @@
+ifdef::context[:parent-context-of-assembly-gs-key-functionality: {context}]
+
+:_mod-docs-content-type: ASSEMBLY
+
+ifndef::context[]
 [id="assembly-gs-key-functionality"]
+endif::[]
+ifdef::context[]
+[id="assembly-gs-key-functionality_{context}"]
+endif::[]
+
+:context: assembly-gs-key-functionality
 
 = Key functionality and concepts
 
@@ -15,3 +26,6 @@ include::platform/con-gs-developer-tools.adoc[leveloffset=+1]
 include::platform/ref-gs-install-config.adoc[leveloffset=+1]
 include::platform/con-gs-dashboard-components.adoc[leveloffset=+1]
 include::platform/con-gs-final-set-up.adoc[leveloffset=+1]
+
+ifdef::parent-context-of-assembly-gs-key-functionality[:context: {parent-context-of-assembly-gs-key-functionality}]
+ifndef::parent-context-of-assembly-gs-key-functionality[:!context:]
