--- a/downstream/modules/platform/con-gs-automation-execution.adoc
+++ b/downstream/modules/platform/con-gs-automation-execution.adoc
@@ -11,10 +11,10 @@ In the automation execution environment, you can use {ControllerName} tasks to b
 
 An inventory file is a single file with a list of hosts and groups that can be acted on using Ansible commands and playbooks. 
 You can use an inventory file to specify your installation scenario and describe host deployments to Ansible. 
-Also, you can use an inventory file to organize managed nodes in centralized files that give Ansible with system information and network locations. 
+You can also use an inventory file to organize managed nodes in centralized files that give Ansible with system information and network locations. 
 
 Depending on the inventory plugins, you can use many formats for your inventory files, but the most common formats are INI and YAML. 
-The location of your inventory file depends on installation program you use. 
+The location of your inventory file depends on the installation program you use. 
 
-.ADDITIONAL RESOURCES
+.Additional resources
 For more details on inventory files, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/html-single/planning_your_installation/index#about_the_installer_inventory_file[About the installer inventory] in the _Red Hat Ansible Automation Platform planning guide_. 
