--- a/downstream/modules/platform/con-gs-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-automation-content.adoc
@@ -18,6 +18,9 @@ There are two types of Red Hat Ansible content:
 
 * Ansible Certified Content Collections, which Red Hat builds, supports, and maintains. 
 Certified collections are included in your subscription to {PlatformName} and you can find in {HubName}.
+* Ansible validated content collections, which are customizable and therefore do not have a support guarantee, but have been tested in the Ansible Automation Platform environment. 
+Ansible validated collections are available in your {PrivateHubName} through the Platform Installer. 
+When you download Red Hat Ansible Automation Platform with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable {PrivateHubName} as part of the inventory.
 
 == Ansible playbooks
 
@@ -25,7 +28,7 @@ Ansible Content Collections often include playbooks.
 Playbooks are YAML files that contain specific sets of human-readable instructions, or “plays”, that you send to run on a single target or groups of targets.  
 Ansible playbooks are repeatable, reusable, configuration management tools designed to deploy complex applications. 
 
-You can use playbooks to manage configurations of and deployments to remote machines, and sequence multitiered rollouts involving rolling updates. 
+You can use playbooks to manage configurations of and deployments to remote machines and sequence multitiered rollouts involving rolling updates. 
 Use playbooks to delegate actions to other hosts, interacting with monitoring servers and load balancers along the way.
 
 Once written, you can use and re-use playbooks for automation across your enterprise. 
