Adding platform admin section to asciidoc
Create Platform admin section of Getting started with AAP

https://issues.redhat.com/browse/AAP-29067

Affects `titles/getting-started`

--- a/downstream/assemblies/platform/assembly-gs-platform-admin.adoc
+++ b/downstream/assemblies/platform/assembly-gs-platform-admin.adoc
@@ -8,9 +8,9 @@ This guide walks you through the basic steps to get set up as an administrator f
 
 To get started as an administrator, learn how to: 
  
-* Log in to the platform as an administrator. 
-* Configure authentication for users by manually creating users, teams, and organizations
-* Configuring user access with role-based access control
+* xref:proc-gs-logging-in[Log in to the platform as an administrator]
+* xref:con-gs-config-authentication[Configure authentication for users by manually creating users, teams, and organizations]
+* xref:con-gs-manage-RBAC[Configuring user access with role-based access control]
 
 include::platform/proc-gs-logging-in.adoc[leveloffset=+1]
 include::platform/con-gs-config-authentication.adoc[leveloffset=+1]
