--- a/downstream/modules/platform/proc-gs-logging-in.adoc
+++ b/downstream/modules/platform/proc-gs-logging-in.adoc
@@ -1,4 +1,4 @@
-[id="proc-aap-gs-logging-in"]
+[id="proc-gs-logging-in"]
 
 = Logging in for the first time
 
@@ -7,25 +7,24 @@ You can then create user profiles and assign roles.
 
 .Procedure
 
-. With the login information provided after your installation completed, open a web browser and log in to Ansible Automation Platform by navigating to its server URL at: https://<AAP_SERVER_NAME>/
+. With the login information provided after your installation completed, open a web browser and log in to {PlatformName} by navigating to its server URL at: https://<AAP_SERVER_NAME>/
 . Use the credentials specified during the installation process to login:
 ** The default username is *admin*.
 ** The password for *admin* is the value specified during installation.
 
 After your first login, you are prompted to add your subscription manifest. 
-Complete the following procedure to do this.
 
 .Procedure
 
 . You can select between uploading a copy of your subscription manifest or entering your login credentials to find the subscription associated with your profile:
 .. To upload a subscription manifest, drag the file to the field beneath *Red Hat subscription manifest* or browse for the file on your local machine.
 .. To find your subscription, click the tab labeled *Username / password* and enter your credentials. Your subscription will appear in the list menu labeled Subscription. Select your subscription.
-. After you have added your subscription, click *Next*.
-. On the screen labeled *Analytics*, check the box if you want to share data with Red Hat and click *Next*.
+. After you have added your subscription, click btn:[Next].
+. On the screen labeled *Analytics*, check the box if you want to share data with Red Hat and click btn:[Next].
 . Check the box indicating that you agree to the *End User License Agreement*. 
-. Review your information and click *Finish*.
+. Review your information and click btn:[Finish].
 
-[NOTE]
+[TIP]
 ====
 After logging in, review the quick starts section for useful guidance.
 ====
