--- a/downstream/modules/platform/proc-gs-platform-admin-create-user.adoc
+++ b/downstream/modules/platform/proc-gs-platform-admin-create-user.adoc
@@ -6,13 +6,16 @@ You can assign two types of users:
 
 Normal user:: Normal users have read and write access limited to the resources (such as inventory, projects, and job templates) for which that user has been granted the appropriate roles and privileges.
 System administrator:: A System administrator (also known as a Superuser) has full system administration privileges — with full read and write privileges over the entire installation. A System administrator is typically responsible for managing all aspects of and delegating responsibilities for day-to-day work to various users.
-Select the Organization to be assigned for this user. For information about creating a new organization or team, see [ADD 2.5 LINK][Creating an organization].
+Select the Organization to be assigned for this user. 
+//[emcwhinn] Removing until 2.5 Link is confirmed. 
+// For information about creating a new organization or team, see [ADD 2.5 LINK][Creating an organization].
 
 .Procedure
 
 . From the navigation panel, select {MenuAMUsers}. 
 . Click btn:[Create user].
-. Enter the details about your new user in the fields on the Create user page. Fields marked with an asterisk (*) are required.
+. Enter the details about your new user in the fields on the *Create user page*. 
+Fields marked with an asterisk (*) are required.
 +
 [NOTE]
 ====
@@ -28,4 +31,5 @@ From here, you can review and change the user's Teams, Roles, Tokens and other m
 If the user is not newly-created, the details screen displays the last login activity of that user.
 ====
 If you log in as yourself, and view the details of your user profile, you can manage tokens from your user profile by selecting the *Tokens* tab.
-For more information, see [ADD 2.5 LINK][Adding a token].
+//[emcwhinn] Removing until 2.5 Link is confirmed. 
+// For more information, see [ADD 2.5 LINK][Adding a user token].
