--- a/downstream/modules/platform/con-gs-automation-decisions.adoc
+++ b/downstream/modules/platform/con-gs-automation-decisions.adoc
@@ -8,4 +8,4 @@ In this way, {EDAName} manages routine automation tasks and responses, freeing y
 Managed through {EDAcontroller}, Ansible rulebooks are the framework for automation decisions. Ansible rulebooks are collections of rulesets, which in turn consist of one or more sources, rules, and conditions. Rulebooks tell the system what events to flag and how to respond to them. From the Automation Decisions section of the platform user interface, you can use rulebooks to connect and listen to event sources, and define actions that are triggered in response to certain events. 
 
 .Additional resources
-For more information about rulebook actions rulebooks, events, and sources, see xref:con-gs-define-events-rulebooks[Rulebook actions].
+For more information about rulebook, events, and sources, see xref:con-gs-define-events-rulebooks[Rulebook actions].
