--- a/downstream/modules/platform/con-gs-config-authentication.adoc
+++ b/downstream/modules/platform/con-gs-config-authentication.adoc
@@ -2,9 +2,8 @@
 
 = Configure authentication
 
-After your first login as administrator you must configure authentication for your users. 
+After your first login as an administrator you must configure authentication for your users. 
 Depending on your organization's needs and resources, you can either:
 
-* Set up local authentication by creating users, teams, and organizations manually.
+* Set up Basic authentication by creating users, teams, and organizations manually.
 * Use an external source such as GitHub to configure authentication for your system.
-
