--- a/downstream/modules/platform/con-gs-manage-RBAC.adoc
+++ b/downstream/modules/platform/con-gs-manage-RBAC.adoc
@@ -5,7 +5,7 @@
 Role-based access control (RBAC) restricts user access based on their role within an organization. 
 The roles in RBAC refer to the levels of access that users have to the network. 
 
-You can control what users can do with the components of Ansible Automation Platform at a broad or granular level depending on your RBAC policy. 
+You can control what users can do with the components of {PlatformNameShort} at a broad or granular level depending on your RBAC policy. 
 You can select whether the user is a system administrator or normal user and align roles and access permissions with their positions within the organization. 
 
 You can define roles can with many permissions that can then be assigned to resources, teams, and users. The permissions that make up a role dictate what the assigned role allows. 
