[Doc] System requirements are not clear for "Installing and Configuring Central Authentication" section.
https://issues.redhat.com/browse/AAP-22900

AAP-22900

--- a/downstream/modules/central-auth/con-central-auth-reqs.adoc
+++ b/downstream/modules/central-auth/con-central-auth-reqs.adoc
@@ -4,7 +4,7 @@
 
 There are several minimum requirements to install and run {AAPCentralAuth}:
 
-* Any operating system that runs Java
+* A supported RHEL8 based server that runs Java
 * Java 8 JDK
 * zip or gzip and tar
 * At least 512mb of RAM
