--- a/downstream/assemblies/devtools/assembly-devtools-install.adoc
+++ b/downstream/assemblies/devtools/assembly-devtools-install.adoc
@@ -12,6 +12,10 @@ Both options require {VSCode} (Visual Studio Code) with the Ansible extension ad
 You can install this option on MacOS, Windows, and Linux systems.
 * Installation on your local RHEL system using an RPM (Red Hat Package Manager) package.
 
+== Requirements
+
+Ansible developer tools require Python 3.10 or later.
+
 include::devtools/proc-devtools-install-vsc.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-vscode-extension.adoc[leveloffset=+1]
 include::devtools/proc-devtools-extension-settings.adoc[leveloffset=+1]
