AAP-29276a Devtools doc fixes

--- a/downstream/modules/devtools/proc-devtools-create-aap-job.adoc
+++ b/downstream/modules/devtools/proc-devtools-create-aap-job.adoc
@@ -5,6 +5,8 @@
 To run your playbook in {PlatformNameShort}, you must create a project in {ControllerName} for the repository where you stored your playbook project.
 You can then create a job template for each playbook from the project.
 
+.Procedure
+
 . In a browser, log in to {controllername}.
 . Configure a Source Control credential type for your source control system if necessary. See the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating new credentials] section of the _Automation controller user guide_ for more details.
 . In {controllername}, create a project for the GitHub repository where you stored your playbook project.
