--- a/downstream/modules/devtools/proc-devtools-install-rpm.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-rpm.adoc
@@ -5,10 +5,11 @@
 [role="_abstract"]
 
 {ToolsName} is bundled in the {PlatformNameShort} RPM (Red Hat Package Manager) package.
-Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}red_hat_ansible_automation_platform_installation_guide[_{PlatformName} Installation guide_] documentation for information on installing {PlatformNameShort}.
+Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide[_{PlatformName} Installation guide_] documentation for information on installing {PlatformNameShort}.
 
 .Prerequisites
-* You have installed RHEL
+
+* You have installed RHEL.
 * You have registered your system with Red Hat Subscription Manager.
 
 .Procedure
