--- a/downstream/modules/devtools/proc-devtools-save-scm.adoc
+++ b/downstream/modules/devtools/proc-devtools-save-scm.adoc
@@ -2,7 +2,9 @@
 
 = Saving your project in SCM
 
-Save your playbook project as a repository in your source control management system, for example GitHub:
+Save your playbook project as a repository in your source control management system, for example GitHub.
+
+.Procedure
 
 . Initialize your project directory as a git repository.
 . Push your project up to a source control system such as GitHub.
